<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.5.4</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>br.com.ccs</groupId>
	<artifactId>rinha</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>rinha</name>
	<description>Lest's play rinha</description>

	<properties>
		<java.version>21</java.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-jdbc</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
			<exclusions>
				<exclusion>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-starter-tomcat</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-undertow</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-webflux</artifactId>
		</dependency>

		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<scope>runtime</scope>
		</dependency>

	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.graalvm.buildtools</groupId>
				<artifactId>native-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<mainClass>br.com.ccs.rinha.RinhaApplication</mainClass>
					<image>
						<name>csouzadocker/rinha-2025-postgres-native:latest</name>
						<builder>paketobuildpacks/builder-jammy-java-tiny:latest</builder>
						<env>
							<BP_JVM_TYPE>JDK</BP_JVM_TYPE>
							<BP_NATIVE_IMAGE>true</BP_NATIVE_IMAGE>
							<BP_JVM_VERSION>${java.version}</BP_JVM_VERSION>
							<!-- Argumentos de build para GraalVM -->
							<BP_NATIVE_IMAGE_BUILD_ARGUMENTS>
								--no-fallback
								--enable-preview
								-H:+UnlockExperimentalVMOptions
								-H:Optimize=2
							</BP_NATIVE_IMAGE_BUILD_ARGUMENTS>
						</env>
					</image>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>
